## Makefile.am -- Process this file with automake to get Makefile.in

EXTRA_DIST = EGSDAT6_.05 EGSDAT6_.15 EGSDAT6_.25 EGSDAT6_.4 EGSDAT6_1. \
	     EGSDAT6_3. NUCNUCCS dpmCT14LL.pds dpmjpar.dat \
             glaubtar.glb glaubint.glb\
	     QGSDAT01 SECTNU VENUSDAT atmabs.dat mirreff.dat \
	     quanteff.dat sectnu-II-04 qgsdat-II-04 all-inputs* \
             parallel-inputs conex-3D-inputs UrQMD-1.3.1-xs.dat gr3.txt
