AC_INIT(COAST, v4r5, http://www-ik.fzk.de/~rulrich/COAST)
AC_REVISION($Id: configure.in,v 1.5 2007-10-09 16:42:28 rulrich Exp $)

dnl AC_CONFIG_MACRO_DIR([m4])

AC_CONFIG_AUX_DIR([config]) 
AM_INIT_AUTOMAKE([foreign subdir-objects])
AC_PREFIX_DEFAULT([`echo $COAST_DIR`])

dnl check environment
if test "x$COAST_DIR" = "x"; then
  AC_MSG_ERROR([\$COAST_DIR environment variable needs to be defined! ABORTING ...])
fi

if test "x$prefix" != "xNONE" && test "x$prefix" != "x$COAST_DIR"; then
  AC_MSG_ERROR([You specified a different --prefix than the \$COAST_DIR environment variable. ABORTING ...])
fi

#if test "x$prefix" = "xNONE" && ( test "x$ac_default_prefix" = "xNONE" || test "x$ac_default_prefix" = "x"); then
#  AC_MSG_ERROR([\$COAST_DIR environment variable needs to be defined OR --prefix=<dir> used! ABORTING ...])
#fi

AC_PROG_CXX
dnl force compiler warnings
if ! echo $CXXFLAGS | grep -q -- -Wall ; then
  CXXFLAGS="$CXXFLAGS -Wall"
fi

AC_DISABLE_STATIC
AC_PROG_LIBTOOL

COAST_INIT
COAST_WITH_ROOT
#COAST_WITH_USERLIB
COAST_WITH_DOXYGEN
COAST_CHECK_MISSING_REQUIRED_PACKAGES

AM_CONFIG_HEADER([COASTconfig.h])

AC_CONFIG_FILES([Makefile
                 CorsikaFileIO/Makefile 
                 CorsikaInterface/Makefile 
                 CorsikaIntern/Makefile
                 CorsikaROOT/Makefile
                 CorsikaToROOT/Makefile
                 Documentation/Makefile
                 rootout/Makefile])

AC_CONFIG_FILES([Documentation/Doxyfile])

AC_OUTPUT

COAST_FINISH

